--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,4 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696641.md#1" target="_blank">北大助理教授被举报与多人有不正当关系</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696641.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/35-150x120.jpg" align ="left"></a>12月2日，一位女生通过大陆微博举报北京大学数学中心博士生导师冯某与多名女子发生不正当关系。此消息虽遭到微博删除，但已被其他网民转载。当天，北京大学相关部门称已开始初查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696474.md#1" target="_blank">海航系多只债券违约 融资10亿借新还旧</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696474.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/1803202337372662-150x120.jpg" align ="left"></a>海航系旗下主要航空上市公司海南航空控股股份有限公司11月30日发布公告表示，已经完成2019年第三期短期融资券发行，共融资10亿元人民币，用以偿还公司债务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696630.md#1" target="_blank">华为手机法国开卖 无谷歌GMS恐不利销售</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696630.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/000_1GO4D3-150x120.jpg" align ="left"></a>华为手机 Mate 30 Pro 将于 12 月 9 日登陆法国，售价1,099欧元（约1,216美元），售卖只在华为官网进行。因该款手机中没有谷歌的GMS服务，被欧洲人称为“很贵的砖头”，其销售前景恐不乐观。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696287.md#1" target="_blank">高以翔骤逝事件为何令赵丽颖意外登上热搜？</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696287.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/zhaoliying-150x120.jpg" align ="left"></a>台湾艺人高以翔拍摄浙江卫视《追我吧》节目时骤逝，年仅35岁，令无数人唏嘘不已。在外界对事故的检视和反思中，大陆女星赵丽颖竟然因早前参加浙江卫视《跑男》节目时差点溺亡的情节登上热搜，并引发大陆作家刘信达在微博对赵丽颖喊话：“你敢不敢为高以翔讨回公道？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696193.md#1" target="_blank">罗斯：若12月15日前没达协议 川普将加税</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696193.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Qingdao-port-1142161134-for-Selling-821-and-BW-652-150x120.jpg" align ="left"></a>在美国提高对中国商品关税之前，美中贸易谈判的时间不多了。美国商务部长罗斯周一（12月2日）表示，若美中没有在12月中旬达成协议，总统已明确表示将提高对中国进口产品的关税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:49 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11689562.md#1" target="_blank">曾出资28万元为家乡修路 上海邓成联陷冤狱</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11689562.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/11-22-150x120.jpg" align ="left"></a>上海市闵行区法轮功学员邓成联于2018年3月被警察入室绑架、构陷，后被非法判刑4年、劫持入狱，在狱中长期绝食抗议。家人没有被告知他在哪个监狱，四处打听，没有任何信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696024.md#1" target="_blank">张宝华转发6人帮名单 揶揄官员回港共渡时艰</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696024.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/DSC_5208_meitu_1-150x120.jpg" align ="left"></a>美国总统川普（特朗普）感恩节前夕签署《香港人权与民主法案》，让参加逆权运动近半年的港人士气大振，纷纷期待被制裁名单出炉。前新闻主播张宝华在Facebook贴出“六人帮”名单，并揶揄出访英国时在人群中忽然失足受伤的律政司司长郑若骅“回港共渡时艰”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:22 AM							</td></tr>
@@ -21,13 +25,9 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11694142.md#1" target="_blank">台北101成共谍大本营？ 学者：代号小香港</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11694142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/1808231139272378-150x120.jpg" align ="left"></a>自称是中国间谍的男子王立强投诚澳洲后，爆出中共如何渗透台湾，以及特务在港台间的布线网，绑架异议人士等，引发各界讨论。特别的是，被视为台湾地标的台北101则被爆出是共谍出入大本营。学者分析，根据国安单位长期掌握的情资显示，台北101早被视为红色势力根据地，代号为“小香港”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 2:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695947.md#1" target="_blank">欧盟通讯会前 蓬佩奥撰文多方曝光中共危害</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695947.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/91cd691a91a4960cd037f88be2f0b050-150x120.jpg" align ="left"></a>周一（12月2日）美国国务卿蓬佩奥在《欧洲政治》（Politico Europe）杂志撰文，他敦促在第二天的欧盟高级通信官员会议上，各国领导人要“将安全放在5G网路的首位”，不要和中共企业共建5G网络。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 2:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695863.md#1" target="_blank">贸易战下中国粮食危机 学者：恐爆政治动荡</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695863.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/10/1312240807392320-150x120.jpg" align ="left"></a>美中贸易战持续，中国可能出现比经济下行更棘手的粮食危机。据中共农业部预测，2020年粮食缺口近2亿吨。对此，有学者认为，将威胁中共政权。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:27 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695835.md#1" target="_blank">挺港抗议印尼女工遭遣返 曾拒写虚假声明</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695835.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010357592188-150x120.jpg" align ="left"></a>一名支持香港民主抗议活动的印尼籍女工兼作家，因工作签证过期而被拘留并于周一（12月2日）被遣返。国际家务工联会认为，香港入境处此次做法不正常，只要工作合同有效，签证过期，入境处一般不会找麻烦。这次不给这名女工续签签证，明显是对她支持抗议活动的政治打压。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11693956.md#1" target="_blank">【十字路口】香港反送中 十大片段触动人心(上)</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11693956.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dc9042b6b37141_ttl7dayrto_20191202-____-___-150x120.jpg" align ="left"></a>香港反送中运动发生到现在已经五个多月，过程中发生过许多可歌可泣的故事，我们也曾经制作过“十大感人片段”与“十大史诗片段”等节目，来记录这一切。今天，要再来跟大家分享，我心目中的十大动人片段。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:09 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695702.md#1" target="_blank">忧中共倾销商品 印度重申不加入RCEP</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695702.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MC9IK-150x120.jpg" align ="left"></a>印度因担心中国倾销商品冲击本土产业，而选择不参加“区域全面经济伙伴协定”（RCEP），除非会员国可启动防御措施。总理莫迪12月1日会见日本官员时，再次表达了对RCEP的担忧，并重申以目前形式加入RCEP，将对印度的利益造成损害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 11:55 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11693957.md#1" target="_blank">中共立法控制国企 退休人员分离或引动荡</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11693957.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/09/1609290318091758-150x120.jpg" align ="left"></a>近日，中共接连通过了多个条例，用行政法规等立法手段确保党控制国企。专家分析认为，在贸易战和经济下行的双重夹击之下，2019年中共危机四伏。把国企退休人员分离出去，全部移交街道，或将引起社会动荡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 11:49 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695361.md#1" target="_blank">台肥借贷韩国瑜买房案 农委会提6疑点移送北检</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/56cee228550dbd9e2e281fa6588e4bbb-150x120.jpg" align ="left"></a>日前媒体报导，国民党总统候选人、高雄市长韩国瑜向台肥公司贷款，购买北市“R5无双─日升月恒”预售屋建案，台肥最大股东农委会也在2日召开记者会，由农委会副主委陈骏季对外说明案件的6项疑点，检附相关资料移请台北地检署及相关业务主管机关进行调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 11:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695755.md#1" target="_blank">沈阳市住宅高楼大火 火势凶猛 伤亡不明</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695755.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Unknown-150x120.jpg" align ="left"></a>12月2日晚21点30分左右，沈阳市浑南区的SR国际新城住宅区发生大火，火光冲天，目前伤亡不明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 11:21 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696856.md#1" target="_blank">张家口4分钟内两次地震 北京居民有震感</a><br></h3>12月3日，河北张家口市怀安县连续发生两次地震，一次2.9级，一次3.4级。不少北京网民表示有震感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696595.md#1" target="_blank">西安大妈趵突泉吐口水拍照 网民：没素质</a><br></h3>近日，在山东济南趵突泉景区，五位游玩的大妈，为了拍摄嘴巴喷水的一幕，集体向泉水吐口水，引来网民批评。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:11 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696580.md#1" target="_blank">每日三退声明精选（2019/12/02）</a><br></h3>看了大纪元的《九评共产党》感到非常的震惊，我为党工作了一生而且大部分工作都是从事党务工作，却不知它如此的邪恶，多可悲呀！现在我醒悟了，我不能做邪教的一份子，现在我郑重声明：退出共产党、共青团和少先队等一切邪恶组织，清除兽的印记。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696472.md#1" target="_blank">北京顺义一厂房发生爆炸 已致1死11伤</a><br></h3>今天（3日）凌晨，北京顺义区牛栏山镇有工厂发生爆炸，事故造成11人送医救治、2人失联、1人死亡，目前正调查爆炸原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695376.md#1" target="_blank">法轮功学员董月孝含冤离世 姜世胜遭冤判3年</a><br></h3>山东诸城市法轮功学员姜世胜、王平升、董月孝于8月1日被青岛市黄岛区法院非法庭审。董月孝当时血压相当高，被家人搀扶进庭，庭审数日后昏迷不醒，被送医院抢救无效，于9月7日含冤去世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/liczai2340/djy/blob/master/gb/nsc413_3.md#1<br><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/liczai2340/djy/blob/master/gb/nsc413_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_3.htm">http://www.epochtimes.com/gb/nsc413_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
