--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -20,7 +20,7 @@
 
 自称是中共特工的王立强，10月向澳洲反间谍机关投诚，澳洲媒体23日刊出其访谈。王立强说，他以中央军事委员会联合参谋部创建的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/22/n11675079.md#1" target="_blank">胡歌谈粉丝：不能接受花钱多就优秀的观念</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/22/n11675079.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1903270615401487-150x120.jpg" align ="left"></a>日前，大陆男星胡歌因今年曾入围戛纳电影节主竞赛单元的唯一华语片《南方车站的聚会》（以下简称《南方》）接受采访。对于主演电视剧十多年之后才真正主演首部电影，胡歌坦言，尽管自己非常担心不如之前演电视剧的表现，但还是决定要尝试一下，“哪怕输了也值得”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 3:49 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/23/n11675404.md#1" target="_blank">在加商城举牌声援香港 祝圣武屡遭特务攻击</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/23/n11675404.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/10FotoJet-1-150x120.jpg" align ="left"></a>香港的反送中运动影响世界，深入人心。温哥华大陆律师祝圣武一个多月来，一直在当地商业中心举牌支持香港，多次遭特务骚扰。近日，他向大纪元记者记述了自己站出来抗议中共的心得。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 1:39 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/30/n11691222.md#1" target="_blank">广西一患者右肾取石 医生在左腰开刀</a><br></h3>本月中旬，广西北海人民医院发生一起医疗事故。患者刘先生接受全麻下右肾取石手术，没想到，主刀医生弄错了手术部位，却开到腰部左侧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11688779.md#1" target="_blank">每日三退声明精选（2019/11/28）</a><br></h3>本人在二十多岁时入党，因年轻无知，对共产党的面目认识不清。随着年龄渐长，尤其出国以后，获得更多资讯，了解到该党对西藏人、新疆人、香港人以及部分大陆人的所作所为，对人权的侵害怵目惊心。我为自己是该党成员感到羞耻。我声明，自2019年11月28日起，本人自愿退出共产党，不再是该党成员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11686830.md#1" target="_blank">班级装饮水机 河南一中学收50元“喝水费”</a><br></h3>学校的班级里装饮水机，本是件方便学生喝水的好事。然而近日，河南省鹿邑县唐集乡中学被曝向学生收取“喝水费”。据了解，收费从今年上半学期就已开始，到了今年秋季开学则变成强制性收费，每位学生每学期被收取50元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 5:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11686097.md#1" target="_blank">每日三退声明精选（2019/11/27）</a><br></h3>小学五年级入团，研究生毕业那年入党，因为厌恶体制内工作远离家乡来到大都市打工。对于我来说一直都是离党和组织有着很遥远的距离。今年发生了很多事情，让我更清楚认识到这个组织的邪恶，他是人类最大的威胁，我们一定要远离他，打败他。无意间发现三退的网站，毫不犹豫选择，今天声明本人退出中国共产党党组织，成为一个人自由人！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 11:29 AM							</td></tr>
